--- a/.github/workflows/export_notebooks.yml
+++ b/.github/workflows/export_notebooks.yml
@@ -14,10 +14,10 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Install lualatex
-              run: sudo apt-get update && sudo apt-get install -y texlive-full
+              run: sudo apt-get update && sudo apt-get install -y xorg-dev mesa-utils xvfb libgl1 freeglut3-dev libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxext-dev texlive-full
               
             - name: Checkout this repository
-              uses: actions/checkout@v2
+              uses: actions/checkout@v3
 
             - name: Install Julia
               uses: julia-actions/setup-julia@v1
@@ -30,7 +30,7 @@ jobs:
                 cache-registries: "true"
 
             - name: Set up notebook state cache
-              uses: actions/cache@v2
+              uses: actions/cache@v3
               with:
                   path: pluto_state_cache
                   key: ${{ runner.os }}-pluto_state_cache-v2-${{ hashFiles('**/Project.toml', '**/Manifest.toml', '.github/workflows/*' ) }}-${{ hashFiles('**/*jl') }}
