--- a/.github/workflows/export_notebooks.yml
+++ b/.github/workflows/export_notebooks.yml
@@ -13,8 +13,13 @@ jobs:
     build-and-deploy:
         runs-on: ubuntu-latest
         steps:
-            - name: Install lualatex
+            - name: Install dependencies
               run: sudo apt-get update && sudo apt-get install -y xorg-dev mesa-utils xvfb libgl1 freeglut3-dev libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libxext-dev texlive-full
+              
+            - name: Adjust display
+              continue-on-error: true
+              run: >
+                  DISPLAY=:0 xvfb-run -s '-screen 0 1024x768x24'
               
             - name: Checkout this repository
               uses: actions/checkout@v3
