--- a/.github/workflows/export_notebooks.yml
+++ b/.github/workflows/export_notebooks.yml
@@ -18,8 +18,8 @@ jobs:
               
             - name: Adjust display
               continue-on-error: true
-              run: >
-                  DISPLAY=:0 xvfb-run -s '-screen 0 1024x768x24'
+              run: > 
+                  DISPLAY=':0'
               
             - name: Checkout this repository
               uses: actions/checkout@v3
