--- a/.github/workflows/export_notebooks.yml
+++ b/.github/workflows/export_notebooks.yml
@@ -19,7 +19,7 @@ jobs:
             - name: Adjust display
               continue-on-error: true
               run: > 
-                  DISPLAY=':0'
+                  export DISPLAY=':0'
               
             - name: Checkout this repository
               uses: actions/checkout@v3
