--- a/.github/workflows/export_notebooks.yml
+++ b/.github/workflows/export_notebooks.yml
@@ -25,7 +25,7 @@ jobs:
                   version: '1'
 
             - name: Cache Julia artifacts
-              uses: julia-actions/cache@v1
+              uses: julia-actions/cache@v2
               with:
                 cache-registries: "true"
 
@@ -41,9 +41,7 @@ jobs:
               run: |
                 julia -e 'using Pkg
                   Pkg.activate(mktempdir())
-                  Pkg.add([
-                    Pkg.PackageSpec(name="PlutoSliderServer", version="0.3.2-0.3"),
-                  ])
+                  Pkg.add([Pkg.PackageSpec(name="PlutoSliderServer")])
 
                   import PlutoSliderServer
 
